[package]
name = "dufs"
version = "0.23.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "Dufs is a distinctive utility file server"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/dufs"
repository = "https://github.com/sigoden/dufs"
categories = ["command-line-utilities", "web-programming::http-server"]
keywords = ["static", "file", "server", "webdav", "cli"]

[dependencies]
clap = { version = "3", default-features = false, features = ["std", "wrap_help"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"]}
tokio-util = { version = "0.7",  features = ["io-util"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp", "stream"] }
percent-encoding = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
base64 = "0.13"
async_zip = { git = "https://github.com/sigoden/rs-async-zip", branch = "patch01" }
async-walkdir = "0.2"
headers = "0.3"
mime_guess = "2.0"
if-addrs = "0.7"
rustls = { version = "0.20", default-features = false, features = ["tls12"], optional = true }
rustls-pemfile = { version = "1", optional = true }
tokio-rustls = { version = "0.23", optional = true }
md5 = "0.7"
lazy_static = "1.4"
uuid = { version = "1.1", features = ["v4", "fast-rng"] }
urlencoding = "2.1"
xml-rs = "0.8"
log = "0.4"
socket2 = "0.4"
async-stream = "0.3"

[features]
default = ["tls"]
tls = ["rustls", "rustls-pemfile", "tokio-rustls"]

[dev-dependencies]
assert_cmd = "2"
reqwest = { version = "0.11", features = ["blocking", "multipart", "rustls-tls"], default-features = false }
assert_fs = "1"
select = "0.5"
port_check = "0.1"
rstest = "0.15"
regex = "1"
pretty_assertions = "1.2"
url = "2"
diqwest = { version = "1", features = ["blocking"] }
predicates = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
